force-app/main/default/objects/Suggestion__c/fields/Suggestion_Category__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Category__c</fullName>
    <label>Suggestion Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Employee Services</fullName>
            </value>
            <value>
                <fullName>Facilitis /IT</fullName>
            </value>
            <value>
                <fullName>Kitchen Snacks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>