force-app/main/default/objects/Suggestion__c/fields/Suggestion_Description__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Description__c</fullName>
    <inlineHelpText>Please enter as much detail around this suggestion so we clearly understand your idea</inlineHelpText>
    <label>Suggestion Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>